Fix java crate after jni update